--- a/lib/src/component/style.scss
+++ b/lib/src/component/style.scss
@@ -1,1 +1,11 @@
-@import "button/button";
+/* ====================
+- > components
+==================== */
+@import "components/01-button/button";
+@import "components/02-logo/logo";
+@import "components/03-nav/nav";
+
+/* ====================
+- > modules
+==================== */
+@import "modules/01-header/header";
