--- a/lib/src/component/_preview.hbs
+++ b/lib/src/component/_preview.hbs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{path '/static/css/style.css'}}">
   <title>Document</title>
   <style>
-    * {margin: 30px;}
+    body {padding: 30px;}
   </style>
 </head>
 <body>
