コンポーネントテスt

--- a/lib/src/component/style.scss
+++ b/lib/src/component/style.scss
@@ -4,6 +4,7 @@
 @import "components/01-button/button";
 @import "components/02-logo/logo";
 @import "components/03-nav/nav";
+@import "components/04-title/title";
 
 /* ====================
 - > modules
