--- a/lib/src/component/static/css/style.css
+++ b/lib/src/component/static/css/style.css
@@ -52,6 +52,25 @@ button {
     .gnav-item a:hover, .gnav-item a[aria-current="true"] {
       color: #00bfff; }
 
+.ttl {
+  font-weight: bold; }
+
+.ttl-lev1 {
+  padding: 10px 20px;
+  background: #f0ffff;
+  border-left: 6px solid #afeeee;
+  font-size: 30px; }
+
+.ttl-lev2 {
+  padding: 0 15px;
+  border-left: 5px solid #afeeee;
+  font-size: 24px; }
+
+.ttl-lev3 {
+  padding-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+  font-size: 18px; }
+
 /* ====================
 - > modules
 ==================== */
